<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group1">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:title="@string/string_home" />
    </group>
    <group android:id="@+id/group2">
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/map_icon"
            android:title="@string/string_map" />
    </group>
    <group android:id="@+id/group3">
        <item
            android:id="@+id/nav_events"
            android:icon="@drawable/event_icon"
            android:title="@string/string_events" />
    </group>
    <group>
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/schedule_icon"
            android:title="@string/string_schedule" />
    </group>

    <group android:id="@+id/group4">
        <item
            android:id="@+id/nav_sponsers"
            android:icon="@drawable/sponsers_icon"
            android:title="@string/string_sponsers" />
    </group>
    <group android:id="@+id/group5">
        <item
            android:id="@+id/nav_teams"
            android:icon="@drawable/teams_icon"
            android:title="@string/string_teams" />
    </group>
    <group android:id="@+id/group6">
        <item
            android:id="@+id/nav_developed_by"
            android:icon="@drawable/developer_icon"
            android:title="@string/string_developed_by" />
    </group>

</menu>
